--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.35MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-975.9KB/s(Youtube:不良林), server: 80.78.132.177, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.90MB/s(Youtube:不良林), server: 38.121.43.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇳 中国-179.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.01MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.76MB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇳 中国-5.54MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.07MB/s(Youtube:不良林), server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇨🇳 中国-150.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.33MB/s(Youtube:不良林), server: 38.75.136.102, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-1.31MB/s(Youtube:不良林), server: 38.121.43.71, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-2.08MB/s(Youtube:不良林), server: 38.121.43.71, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.35MB/s(Youtube:不良林)
-      - 🇩🇪 德国-975.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-179.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-150.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.35MB/s(Youtube:不良林)
-      - 🇩🇪 德国-975.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-179.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-150.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.35MB/s(Youtube:不良林)
-      - 🇩🇪 德国-975.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-179.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-150.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.35MB/s(Youtube:不良林)
-      - 🇩🇪 德国-975.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-179.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-150.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.35MB/s(Youtube:不良林)
-      - 🇩🇪 德国-975.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-179.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-150.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.35MB/s(Youtube:不良林)
-      - 🇩🇪 德国-975.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-179.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-150.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.35MB/s(Youtube:不良林)
-      - 🇩🇪 德国-975.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-179.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-150.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
