--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.17MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-409.3KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.77MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.73MB/s(Youtube:不良林), server: 38.121.43.71, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-152.3KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇷🇺 俄罗斯联邦-1.04MB/s(Youtube:不良林), server: ru.2046.gq, port: 4443, type: trojan, password: 2c2b076e-42c1-4761-9b5c-1800ba829e1a, sni: ru.2046.gq, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.31MB/s(Youtube:不良林), server: 38.121.43.71, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-882.0KB/s(Youtube:不良林), server: 38.121.43.71, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-2.70MB/s(Youtube:不良林), server: 38.75.136.102, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-387.8KB/s(Youtube:不良林), server: 51.81.223.26, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-648.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 台湾-191.8KB/s(Youtube:不良林), server: hinet.52147.top, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hinet.52147.top, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.75MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.11MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.94MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.87MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-211.3KB/s(Youtube:不良林), server: v6.heduian.online, port: 30866, type: vmess, uuid: cbb3f877-d1fb-344c-87a9-d153bffd5484, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /oooo, ws-headers: {Host: v6.heduian.online}}
+  - {name: 🇻🇳 越南-1.42MB/s(Youtube:不良林), server: 103.173.255.228, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-409.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-152.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-882.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-387.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-648.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-191.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-211.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.42MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-409.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-152.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-882.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-387.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-648.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-191.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-211.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.42MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-409.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-152.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-882.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-387.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-648.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-191.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-211.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.42MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-191.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-409.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-152.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-882.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-387.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-648.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-191.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-211.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.42MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-409.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-152.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-882.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-387.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-648.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-191.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-211.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.42MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-409.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-152.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-882.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-387.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-648.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-191.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-211.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.42MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-409.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-152.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-882.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-387.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-648.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-191.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-211.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.42MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
