--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-409.3KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.77MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-648.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 台湾-191.8KB/s(Youtube:不良林), server: hinet.52147.top, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hinet.52147.top, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.75MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.11MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-917.7KB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-1.47MB/s(Youtube:不良林), server: 38.121.43.71, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-1.31MB/s(Youtube:不良林), server: 38.121.43.71, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-261.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.11MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.94MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.87MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-409.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-648.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-191.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-917.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-261.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-409.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-648.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-191.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-917.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-261.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-409.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-648.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-191.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-917.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-261.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
@@ -66,18 +66,17 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-191.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-409.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-648.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-191.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-917.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-261.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
@@ -88,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-409.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-648.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-191.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-917.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-261.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
@@ -104,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-409.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-648.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-191.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-917.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-261.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
@@ -129,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-409.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-648.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-191.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-917.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-261.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
