--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.11MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-917.7KB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-1.47MB/s(Youtube:不良林), server: 38.121.43.71, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-1.31MB/s(Youtube:不良林), server: 38.121.43.71, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-261.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.34MB/s(Youtube:不良林), server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇺🇸 美国-2.20MB/s(Youtube:不良林), server: 38.75.136.102, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇳 台湾-191.8KB/s(Youtube:不良林), server: hinet.52147.top, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hinet.52147.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-847.7KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.11MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.94MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.87MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-211.3KB/s(Youtube:不良林), server: v6.heduian.online, port: 30866, type: vmess, uuid: cbb3f877-d1fb-344c-87a9-d153bffd5484, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /oooo, ws-headers: {Host: v6.heduian.online}}
-  - {name: 🇻🇳 越南-1.42MB/s(Youtube:不良林), server: 103.173.255.228, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-236.8KB/s(Youtube:不良林), server: ss.2046.gq, port: 4443, type: trojan, password: 2c2b076e-42c1-4761-9b5c-1800ba829e1a, sni: ss.2046.gq, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-488.5KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇺🇸 美国-1.22MB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇬🇧 英国-331.0KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-205.0KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-917.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-261.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-191.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-847.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-211.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-236.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-488.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇬🇧 英国-331.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-205.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-917.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-261.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-191.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-847.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-211.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-236.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-488.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇬🇧 英国-331.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-205.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-917.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-261.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-191.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-847.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-211.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-236.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-488.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇬🇧 英国-331.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-205.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-191.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-917.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-261.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-191.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-847.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-211.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-236.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-488.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇬🇧 英国-331.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-205.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-917.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-261.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-191.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-847.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-211.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-236.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-488.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇬🇧 英国-331.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-205.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-917.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-261.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-191.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-847.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-211.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-236.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-488.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇬🇧 英国-331.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-205.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-917.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-261.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-191.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-847.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-211.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-236.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-488.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇬🇧 英国-331.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-205.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
