--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-236.8KB/s(Youtube:不良林), server: ss.2046.gq, port: 4443, type: trojan, password: 2c2b076e-42c1-4761-9b5c-1800ba829e1a, sni: ss.2046.gq, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-4.17MB/s(Youtube:不良林), server: 103.173.255.228, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.69MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-454.2KB/s(Youtube:不良林), server: ru.2046.gq, port: 4443, type: trojan, password: 2c2b076e-42c1-4761-9b5c-1800ba829e1a, sni: ru.2046.gq, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.46MB/s(Youtube:不良林), server: 38.121.43.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-1.08MB/s(Youtube:不良林), server: 38.68.134.85, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-1.03MB/s(Youtube:不良林), server: 38.75.136.102, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-1.38MB/s(Youtube:不良林), server: 38.68.135.18, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇳 中国-1.30MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-5.59MB/s(Youtube:不良林), server: 103.173.255.228, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.07MB/s(Youtube:不良林), server: 38.75.136.102, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇳 中国-2.61MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-719.2KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.01MB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 2c2b076e-42c1-4761-9b5c-1800ba829e1a, sni: ss2.2046.gq, skip-cert-verify: true}
   - {name: 捷克-438.7KB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇨🇳 中国-694.1KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20060, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-321.1KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-277.4KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-236.8KB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-454.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-719.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
       - 捷克-438.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-694.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-321.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-277.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-236.8KB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-454.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-719.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
       - 捷克-438.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-694.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-321.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-277.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-236.8KB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-454.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-719.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
       - 捷克-438.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-694.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-321.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-277.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-236.8KB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-454.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-719.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
       - 捷克-438.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-694.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-321.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-277.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-236.8KB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-454.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-719.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
       - 捷克-438.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-694.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-321.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-277.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-236.8KB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-454.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-719.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
       - 捷克-438.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-694.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-321.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-277.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-236.8KB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-454.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-719.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
       - 捷克-438.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-694.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-321.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-277.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
